Fix up spacing on the paging buttons

--- a/ui/src/components/Toolbar/PagingButtons.scss
+++ b/ui/src/components/Toolbar/PagingButtons.scss
@@ -1,9 +1,12 @@
 @import "~@blueprintjs/core/lib/scss/variables";
 
 .PagingButtons {
-  .paging-text {
+  width: 100%;
+
+  button.pt-button.paging-text {
     // min-width: 112px;
     color: $dark-gray1 !important;
+    flex: 100 1 auto !important;
     // margin: 0;
   }
 }
