--- a/ui/src/viewers/PdfViewer.scss
+++ b/ui/src/viewers/PdfViewer.scss
@@ -96,12 +96,7 @@ $pagesWidth: 150px;
         font-size: 1.2em;
         width: 100%;
       }
-
-      .spinner {
-        margin: 100px 0;
-      }
     }
-
   }
 }
 
